[tool.poetry]
name = "edenaiapis"
version = "0.1.2"
description = "Providers connectors"
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
ffmpeg-python = "^0.2.0"
langcodes = "^3.3.0"
language-data = "^1.1"
pandas = "^2.1.2"
pdf2image = "^1.16.3"
Pillow = "^10.1.0"
pycountry = "^22.3.5"
pydantic = "^2.4.2"
pylint = "^3.0.2"
pydub = "^0.25.1"
pypdf = "^3.17.0"
sagemaker = "^2.196.0"
setuptools = "^68.2.2"
python-magic = "^0.4.27"
Sphinx = "^7.2.6"
furo = "^2023.9.10"
psycopg2 = "^2.9.9"
pytest-mock = "^3.12.0"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
pytest-xdist = "^3.3.1"
pytest-timeout = "^2.2.0"
affinda = "^4.13.0"
boto3 = "^1.28.77"
amazon-textract-response-parser = "^1.0.2"
watson-developer-cloud = "^2.10.1"
azure-core = "^1.29.5"
azure-cognitiveservices-speech = "^1.32.1"
modernmt = "^1.5.0"
aleph-alpha-client = "^4.0.0"
openai = "^0.28.1"
azure-ai-formrecognizer = "^3.3.1"
lettria = "^6.0.2"
clarifai-grpc = "^9.10.0"
google-api-python-client = "^2.106.0"
google-cloud-documentai = "^2.20.2"
google-cloud-language = "^2.11.1"
google-cloud-storage = ">=2.9.0"
google-cloud-texttospeech = ">=2.14.1"
google-cloud-translate = ">=3.11.1"
google-cloud-vision = ">3.4.2"
google-cloud-videointelligence = ">=2.11.2"
google-cloud-automl = ">=2.11.1"
google-cloud-aiplatform = ">=1.35.0"

[tool.poetry.scripts]
dev = "main:dev"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"